--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "forkify",
   "version": "1.0.0",
   "description": "Recipe application",
-  "default": "index.html",
+  "deafult": "dist/index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
+  "targets": {
+    "main": false
+  },
   "scripts": {
     "start": "parcel index.html",
     "build": "parcel build index.html --dist-dir ./dist"
   },
-  "source": {
-    "maps": true
-  },
-  "author": "Anton Inzhirov",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.3",
-    "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "@parcel/transformer-sass": "^2.7.0",
+    "parcel": "^2.7.0"
   },
   "dependencies": {
-    "core-js": "^3.30.1",
+    "core-js": "^3.24.1",
     "fracty": "^1.0.11",
-    "regenerator-runtime": "^0.13.11",
-    "sass": "^1.62.1"
+    "regenerator-runtime": "^0.13.9"
+  },
+  "optionalDependencies": {
+    "@parcel/css-linux-x64-gnu": "latest"
   }
 }
